@@ -8,6 +8,10 @@ plone.app.portlets UNRELEASED
 
 plone.app.portlets 1.0.6
 
+    - Make the language portlet handle languages without a native name
+      correctly.
+      [wichert]
+
     - Do not link to news_listing from the news portlet: that template has
       been removed from Plone. This fixes
       http://dev.plone.org/plone/ticket/7872
